Fix gap issue

--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@ body {
   margin: 15rem 0;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
-  grid-gap: 6rem;
+  grid-gap: 4rem;
   align-items: start; }
 
 .feature {
